List slider arrow only visibility fix

--- a/styles/List.module.scss
+++ b/styles/List.module.scss
@@ -29,7 +29,10 @@
 
       &.left{
         left: 0;
-        visibility: hidden;
+        // visibility: hidden;
+        path{
+          border:2px solid red;
+        }
       }
 
       &.right{
